Added sell option for users cars and information button for their cars.

--- a/Xcelerate/Views/Home/About.cshtml
+++ b/Xcelerate/Views/Home/About.cshtml
@@ -14,11 +14,11 @@
         <span class="website-name" filter-content="X">Xcelerate</span>
 
         <img class="top-image-first"
-         src="~/Images/About/rowan-heuvel-mjnO4ipSBy0 -unsplash top test.png"
-             alt="background-top" />
+         src="~/Images/About/sky-top-image.png"
+             alt="sky-background-top" />
         <img class="bottom-image-first"
-         src="~/Images/About/rowan-heuvel-mjnO4ipSBy0-unsplash bottom test.png"
-             alt="background-bottom" />
+         src="~/Images/About/car-road-bottom-image.png"
+             alt="car-on-road-background-bottom" />
     </div>
 
         <article class="main-content">
@@ -66,10 +66,10 @@
 
             <span class="explore-text" filter-content="X">Xplore</span>
             <img class="top-image-second"
-         src="~/Images/About/865fb51f-f6e8-43bf-90d4-439c76f9111c.png"
-                 alt="background-top" />
+         src="~/Images/About/mountains-top-image.png"
+                 alt="mountains-background-top" />
             <img class="bottom-image-second"
-         src="~/Images/About/jon-flobrant-lRSChvh1Mhs-unsplash bottom test test.png"
-                 alt="background-bottom" />
+         src="~/Images/About/jeep-offroad-bottom-image.png"
+                 alt="jeep-off-roading-background-bottom" />
         </div>
 
