--- a/Xcelerate/Views/UserCars/Index.cshtml
+++ b/Xcelerate/Views/UserCars/Index.cshtml
@@ -31,8 +31,8 @@
 					</ul>
 					<footer class="bottom-text">
 						<i>
-							<a class="edit-button" asp-area="" asp-controller="Ad" asp-action="Edit" asp-route-carId="@ad.CarId">Edit</a>
-							<a asp-area="" asp-controller="Ad" asp-action="Information" asp-route-carId="@ad.CarId">View</a>
+							<a class="sell-button" asp-area="" asp-controller="UserCars" asp-action="Sell" asp-route-carId="@ad.CarId">Sell</a>
+							<a class="view-button" asp-area="" asp-controller="UserCars" asp-action="Information" asp-route-carId="@ad.CarId">View</a>
 						</i>
 					</footer>
 				</div>
