--- a/Xcelerate/wwwroot/css/Account/Login/Login.css
+++ b/Xcelerate/wwwroot/css/Account/Login/Login.css
@@ -171,50 +171,36 @@ button {
 }
 
 .card-login {
-    opacity: 1;
-    margin: 100px 10px 314px 35%;
+    margin: 120px 10px 314px 35%;
     border-radius: 24px;
-    /* background-image: url(2021_honda_civic_type_r_9_1920x1080.png); */
     background-repeat: no-repeat;
     background-size: cover;
     width: 510px;
-    height: 430px;
+    height: 410px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(7px);
-    transition: opacity 0.5s; /* Add a transition effect */
 }
 
-.minimize-icon-holder-login {
-    display: block;
+@keyframes colorAnimation {
+    0% {
+        color: #ffffff; /* Whitish color */
+    }
+
+    100% {
+        color: #ffff00; /* Yellowish color */
+    }
+}
+
+.error-container li {
+    font-size: 18px;
+    padding: 0px;
+    margin-top: 5px;
+    width: 300px;
+    text-shadow: 4px 4px 4px rgba(0, 0, 0, 0.5);
+    list-style-type: none;
     position: absolute;
-    right: 1px;
-    padding: 2px;
-    width: 60px;
-    height: 60px;
-    margin: 8px 12px 0px 0px;
-    border-radius: 40px;
-    backdrop-filter: blur(6px);
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    transition: opacity 0.5s; /* Add a transition effect */
-}
-
-
-
-#minimizeIcon-login {
-    position: inherit;
-    right: 1px;
-    margin: 4px 4px 0px 0px;
-    padding: 1px;
-    width: 50px;
-    height: 50px;
-    border-radius: 40px;
-    backdrop-filter: blur(2px);
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 1);
-    border-color: black;
-    -webkit-touch-callout: none; /* iOS Safari */
-    -webkit-user-select: none; /* Safari */
-    -moz-user-select: none; /* Old versions of Firefox */
-    -ms-user-select: none; /* Internet Explorer/Edge */
-    user-select: none; /* Non-prefixed version, currently supported by Chrome, Opera and Firefox */
-    transition: opacity 0.5s; /* Add a transition effect */
+    left: 28%;
+    color: rgba(174, 60, 51, 255);
+    transition: color 0.2s ease-in-out;
+    animation: colorAnimation 6s infinite alternate;
 }
