--- a/Xcelerate/Views/Ad/Information.cshtml
+++ b/Xcelerate/Views/Ad/Information.cshtml
@@ -1,5 +1,4 @@
 ﻿@model AdInformationViewModel
-
 <link rel="stylesheet" href="~/css/Ad/Information.css" asp-append-version="true" />
 
 <section class="card-holder" asp-action="Information">
@@ -17,9 +16,21 @@
 		<div class="card-text">
 			<ul class="list-information-car">
 				<strong class="price-information">Price: @Model.Price$</strong>
-				<form asp-area="" asp-controller="Ad" asp-action="Buy" asp-route-carId="@Model.CarId" method="post">
-					<button type="submit" class="buy-button" onclick="logCarId()">BUY</button>
-				</form>
+				@if (ViewBag.UserId != null && ViewBag.UserId == Model.UserId)
+				{
+					<!-- Display content for the owner -->
+					<form asp-area="" asp-controller="UserCars" asp-action="Cancel" asp-route-carId="@Model.CarId" method="post">
+						<button type="submit" class="cancel-button">Cancel Ad</button>
+					</form>
+				}
+				else
+				{
+					<!-- Display content for non-owner -->
+					<form asp-area="" asp-controller="Ad" asp-action="Buy" asp-route-carId="@Model.CarId" method="post">
+						<button type="submit" class="buy-button" onclick="logCarId()">BUY</button>
+					</form>
+				}
+
 				<div class="car-information">
 				<li><strong>Year:</strong> @Model.Year</li>
 				<li><strong>Engine:</strong> @Model.Engine</li>
@@ -99,13 +110,6 @@
 			$("#carImage").fadeTo(200, 0, function () {
 				$(this).attr("src", imageUrl).fadeTo(200, 1);
 			});
-		}
-	</script>
-
-	<script>
-		function logCarId() {
-			var carId = @Model.CarId; // Assuming CarId is an integer
-			console.log("CarId:", carId);
 		}
 	</script>
 }
