Added car information compare.

--- a/Xcelerate/Views/Ad/Create.cshtml
+++ b/Xcelerate/Views/Ad/Create.cshtml
@@ -204,6 +204,7 @@
 
 		</section>
 
+		<input type="hidden" name="isSubmited" value="true" />
 		<section class="button-object">
 			<button class="submit-button" type="submit">SUMBIT FORM</button>
 		</section>
