--- a/Xcelerate/wwwroot/css/Ad/Compare.css
+++ b/Xcelerate/wwwroot/css/Ad/Compare.css
@@ -57,7 +57,7 @@ body {
     color: rgba(203, 32, 36, 255);
 }
 
-.hostel-home-card {
+.car-card {
     margin-top: 70px;
     border-radius: 20px 20px 0px 0px;
     background-color: rgb(255, 255, 255);
@@ -125,10 +125,10 @@ body {
     background-size: cover;
 }
 
-.hostel-home-card {
+.car-card {
     display: flex;
     flex-direction: column;
-    height: 772px;
+    height: 782px;
     width: 500px;
     margin-top: 50px;
     margin-bottom: 20px;
@@ -156,7 +156,7 @@ body {
     margin: 0px auto;
 }
 
-.hostel-home-card p {
+.car-card p {
     margin: 0px auto;
     padding: 25px;
     width: 440px;
@@ -182,27 +182,15 @@ body {
         color: white;
         font-size: 22px;
         padding: 12px 38px;
-        background: linear-gradient(180deg, darkred, rgba(255, 255, 255, 0.2));
+        background-color: darkred;
         border-radius: 25px;
         text-decoration: none;
         position: absolute;
         left: 185px;
     }
 
-.compare-button {
-    width: 170px;
-    height: 52px;
-    color: white;
-    font-size: 22px;
-    padding: 12px 38px;
-    background: linear-gradient(180deg, rgb(112, 126, 255), rgba(255, 255, 255, 0.1));
-    border-radius: 25px;
-    text-decoration: none;
-    position: absolute;
-    left: 34%;
-}
 
-.hostel-home-card p i {
+.car-card p i {
     color: white;
     font-size: 15px;
     text-align: center;
@@ -212,6 +200,10 @@ body {
     height: 10%;
     position: absolute;
     right: 128px;
+}
+
+ul li{
+    font-size:17px;
 }
 
 .card-holder {
@@ -231,4 +223,93 @@ body {
     gap: 28px;
     align-items: center; /* Center the cards horizontally */
     margin-bottom: 460px;
+}
+
+.prev.first-car {
+    cursor: pointer;
+    position: absolute;
+    top: 294px;
+    left: 440px;
+    width: 10px;
+    padding: 16px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+    background-color: rgba(0,0,0,0.4);
+}
+
+.next.first-car {
+    cursor: pointer;
+    position: absolute;
+    top: 294px;
+    left: 898px;
+    width: 10px;
+    padding: 16px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+    background-color: rgba(0,0,0,0.4);
+    right: 0; /* Position the "next button" to the right */
+    border-radius: 3px 0 0 3px;
+}
+
+
+.prev.second-car {
+    cursor: pointer;
+    position: absolute;
+    top: 294px;
+    right: 899px;
+    padding: 16px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+    background-color: rgba(0,0,0,0.4);
+
+}
+
+.next.second-car {
+    cursor: pointer;
+    position: absolute;
+    top: 294px;
+    width: 10px;
+    padding: 16px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+    background-color: rgba(0,0,0,0.4);
+    right: 440px; /* Position the "next button" to the right */
+    border-radius: 3px 0 0 3px;
+}
+
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+    background-color: rgba(0,0,0,0.8);
+}
+
+.fade {
+    animation-name: fade;
+    animation-duration: 0.6s;
+}
+
+@keyframes fade {
+    from {
+        opacity: .4
+    }
+
+    to {
+        opacity: 1
+    }
 }
