--- a/Xcelerate/Views/Ad/Index.cshtml
+++ b/Xcelerate/Views/Ad/Index.cshtml
@@ -133,8 +133,8 @@ else
 			icon: 'error',
 			title: 'Compare error!',
 			text: 'Can\'t compare the same car!',
-			showConfirmButton: false,
-			timer: 3000
+			showConfirmButton: true,
+			background: 'linear-gradient(180deg, rgb(41, 40, 40), rgba(255, 255, 255, 0.8))'
 		});
 	</script>
 	@TempData.Remove("CompareError")
