--- a/Xcelerate/Views/_ViewImports.cshtml
+++ b/Xcelerate/Views/_ViewImports.cshtml
@@ -6,3 +6,4 @@
 @using Xcelerate.Core.Models.Ad;
 @using Xcelerate.Core.Models.Account.UserProfile;
 @using Xcelerate.Core.Models.UserCars;
+@using Xcelerate.Core.Models.Review;
