--- a/Xcelerate/Views/Ad/Index.cshtml
+++ b/Xcelerate/Views/Ad/Index.cshtml
@@ -101,7 +101,7 @@ else
 							}
 							else
 							{
-								<a asp-area="" asp-controller="Ad" asp-action="Information" asp-route-carId="@ad.CarId">View</a>
+								<a asp-area="" asp-controller="Ad" asp-action="Information" asp-route-carId="@ad.CarId" asp-route-adId="@ad.AdId">View</a>
 							}
 						</i>
 					</footer>
