--- a/Xcelerate/wwwroot/css/Ad/Information.css
+++ b/Xcelerate/wwwroot/css/Ad/Information.css
@@ -135,6 +135,31 @@ body {
     height: 20px;
 }
 
+.edit-and-delete-container {
+    margin-left: 220px;
+    height: 0px;
+    width: 0px;
+}
+
+.delete-icon {
+    width: 20px;
+    height: 20px;
+    position: relative;
+    bottom: 32px;
+    right: 44px;
+}
+
+.delete-icon-link {
+    background: none;
+    border: none;
+    padding: 0;
+}
+
+.edit-icon {
+    width: 20px;
+    height: 20px;
+}
+
 .review-comment {
     width: 385px;
     height: auto;
